--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,3 +5,12 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 token=mywechat
+appid=wx0f70cc49699cf04c
+secret=d1d4245d1629f13546f3b39a8d52689e
+
+db.type = mysql
+db.name = genesis
+db.user.name=root
+db.user.password=123456
+db.address.ip=127.0.0.1
+db.address.port=3306
