--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,8 +5,12 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 token=mywechat
-appid=wx0f70cc49699cf04c
-secret=d1d4245d1629f13546f3b39a8d52689e
+
+#appid=wx0f70cc49699cf04c
+#secret=d1d4245d1629f13546f3b39a8d52689e
+
+appid=wx7a5a0a0ff8634cbb
+secret=283198e36a3bbd3f8eaf017762717eaa
 
 db.type = mysql
 db.name = genesis
