--- a/conf/app.conf
+++ b/conf/app.conf
@@ -6,11 +6,16 @@ copyrequestbody = true
 EnableDocs = true
 token=mywechat
 
-appid=wx0f70cc49699cf04c
-secret=d1d4245d1629f13546f3b39a8d52689e
+#佑恩堂正式号
+#appid=wx0f70cc49699cf04c
+#secret=d1d4245d1629f13546f3b39a8d52689e
 
 #appid=wx7a5a0a0ff8634cbb
 #secret=283198e36a3bbd3f8eaf017762717eaa
+
+#佑恩堂测试号
+appid=wx0f70cc49699cf04c
+secret=d1d4245d1629f13546f3b39a8d52689e
 
 db.type = mysql
 db.name = genesis
